--- a/content/publication/2009-cointtest/cite.bib
+++ b/content/publication/2009-cointtest/cite.bib
@@ -3,7 +3,7 @@
   journal   = {Econometric Theory},
   number    = {6},
   pages     = {1829--1850},
-  title     = {Testing the null of no cointegration when covariates are known to have a unit root},
+  title     = {{Testing the Null of No Cointegration When Covariates Are Known to Have a Unit Root}},
   volume    = {25},
   year      = {2009},
   publisher = {Cambridge University Press},
