--- a/content/publication/2006-smallsampleirf/cite.bib
+++ b/content/publication/2006-smallsampleirf/cite.bib
@@ -1,8 +1,10 @@
 @Article{Pesavento2006,
-  author    = {Pesavento, Elena and Ross, Barbara},
+  author    = {Pesavento, Elena and Rossi, Barbara},
   journal   = {Journal of Applied Econometrics},
+  number    = {8},
   pages     = {1135--1155},
   title     = {{Small-Sample Confidence Intervals for Multivariate Impulse Response Functions at Long Horizons}},
+  volume    = {21},
   year      = {2006},
-  publisher = {JSTOR},
+  publisher = {Wiley Online Library},
 }
